testing different parameters for language generation

--- a/notebooks/Projects/nlp/2.0-ajmk-generate-reviews.ipynb
+++ b/notebooks/Projects/nlp/2.0-ajmk-generate-reviews.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-03 15:18:38.379717: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,44 +28,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df[\"text\"] = df[\"text\"].str.replace(\"[^\\w\\s]\", \"\")\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:8: SettingWithCopyWarning: \n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"text\"] = df[\"text\"].str.replace(\"[^\\w\\s]\", \"\")\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:10: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:10: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df[\"text\"] = df[\"text\"].str.replace(\"\\d+\", \"\")\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:10: SettingWithCopyWarning: \n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"text\"] = df[\"text\"].str.replace(\"\\d+\", \"\")\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"text\"] = df[\"text\"].str.lower()\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:14: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:14: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df[\"text\"] = df[\"text\"].str.replace(\"\\s+\", \" \")\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"text\"] = df[\"text\"].str.replace(\"\\s+\", \" \")\n",
-      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_17839/457292174.py:16: SettingWithCopyWarning: \n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -98,13 +89,13 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def tokenize_corpus(corpus, num_words=10000, oov_token=\"<OOV>\"):\n",
+    "def tokenize_corpus(corpus, num_words=1000, oov_token=\"<OOV>\"):\n",
     "    tokenizer = Tokenizer(num_words=num_words, oov_token=oov_token)\n",
     "    tokenizer.fit_on_texts(corpus)\n",
     "    return tokenizer\n",
@@ -132,26 +123,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m test \u001b[39m=\u001b[39m create_review_corpus(test)\n\u001b[1;32m      2\u001b[0m test_tokenizer \u001b[39m=\u001b[39m tokenize_corpus(test)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(test_tokenizer\u001b[39m.\u001b[39mnum_words)\n",
-      "Cell \u001b[0;32mIn[9], line 8\u001b[0m, in \u001b[0;36mcreate_review_corpus\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate_review_corpus\u001b[39m(df):\n\u001b[1;32m      7\u001b[0m     \u001b[39m# remove punctuation\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m     df[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m\"\u001b[39;49m\u001b[39mtext\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m[^\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\\\u001b[39m\u001b[39ms]\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m     \u001b[39m# remove numbers\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     df[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.522418806660568\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df[\"text\"] = df[\"text\"].str.replace(\"[^\\w\\s]\", \"\")\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"text\"] = df[\"text\"].str.replace(\"[^\\w\\s]\", \"\")\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:10: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df[\"text\"] = df[\"text\"].str.replace(\"\\d+\", \"\")\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"text\"] = df[\"text\"].str.replace(\"\\d+\", \"\")\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"text\"] = df[\"text\"].str.lower()\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:14: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df[\"text\"] = df[\"text\"].str.replace(\"\\s+\", \" \")\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"text\"] = df[\"text\"].str.replace(\"\\s+\", \" \")\n",
+      "/var/folders/nc/v4p72y255nn_y662tn1s3yv00000gp/T/ipykernel_42540/41653911.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"text\"] = df[\"text\"].str.strip()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n"
      ]
     }
    ],
    "source": [
-    "test_review_corpus = create_review_corpus(test)\n",
-    "test_tokenizer = tokenize_corpus(test_review_corpus)\n",
+    "# get reviews which are shorter than 50 words\n",
+    "short_reviews = train[train[\"text\"].str.split().str.len() < 50]\n",
+    "# print average length of short reviews\n",
+    "print(short_reviews[\"text\"].str.split().str.len().mean())\n",
+    "\n",
+    "test_review_corpus = create_review_corpus(short_reviews[:10000])\n",
+    "test_tokenizer = tokenize_corpus(test_review_corpus, num_words=10000, oov_token=\"<OOV>\")\n",
     "print(test_tokenizer.num_words)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.782056411282255\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get average length of reviews\n",
+    "review_lengths = [len(review.split()) for review in test_review_corpus]\n",
+    "print(np.mean(review_lengths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get n_grams\n",
+    "def get_n_grams(corpus, tokenizer, length_of_input):\n",
+    "    n_grams = []\n",
+    "    for review in corpus:\n",
+    "        tokens = tokenizer.texts_to_sequences([review])[0]\n",
+    "        for i in range(len(tokens)+1):\n",
+    "            n_grams.append(tokens[:i+1])\n",
+    "    \n",
+    "    # pad sequences\n",
+    "    n_grams = pad_sequences(n_grams, maxlen=length_of_input, padding=\"pre\")\n",
+    "\n",
+    "    # split sequences by input and output\n",
+    "    n_grams = np.array(n_grams)\n",
+    "    X = n_grams[:,:-1]\n",
+    "    y = n_grams[:,-1]\n",
+    "    y = tf.keras.utils.to_categorical(y, num_classes=tokenizer.num_words)\n",
+    "\n",
+    "    return X, y\n",
+    "\n",
+    "# max_length_of_input = max([len(i) for i in test_review_corpus])\n",
+    "max_length_of_input = 50\n",
+    "inputs, outputs = get_n_grams(test_review_corpus, test_tokenizer, length_of_input=max_length_of_input)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(297767, 49)\n",
+      "(297767, 10000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inputs.shape)\n",
+    "print(outputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      " 267/7445 [>.............................] - ETA: 5:14 - loss: 7.1419 - accuracy: 0.0452"
+     ]
+    }
+   ],
+   "source": [
+    "def create_model(n_grams, num_words, max_len, embedding_dim=64):\n",
+    "    model = tf.keras.Sequential([\n",
+    "        tf.keras.layers.Embedding(num_words, embedding_dim, input_length=max_len-1),\n",
+    "        tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)),\n",
+    "        tf.keras.layers.Dropout(0.2),\n",
+    "        tf.keras.layers.Dense(64, activation=\"relu\"),\n",
+    "        tf.keras.layers.Dropout(0.2),\n",
+    "        tf.keras.layers.Dense(outputs.shape[1], activation=\"softmax\")\n",
+    "    ])\n",
+    "\n",
+    "    model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "    return model\n",
+    "\n",
+    "model = create_model(inputs, test_tokenizer.num_words, max_length_of_input)\n",
+    "\n",
+    "# Set up early stopping\n",
+    "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_accuracy', patience=3, mode='max', restore_best_weights=True)\n",
+    "\n",
+    "# Train the model with validation data\n",
+    "history = model.fit(inputs, outputs, epochs=100, verbose=1, validation_split=0.2, callbacks=[early_stopping])\n",
+    "\n",
+    "# save best model\n",
+    "model.save(\"../../../models/yelp/review-generator.h5\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bad food attitude to die for inexpensive cleaning i highly recommend there personnel are amazing and worth that i had tshirts and the service was so fun and they said theyre fresh and <OOV> thanks hmmmm they will find pretty large collection of glass are totally tough to shop soon as are can special drug it has been rude right before ill run off of new meals not more better than a be acknowledged the environment is delicious and great affordable nice hour selection i prefer around good close with half good deals nice times hands down less than nyc and been taking my daughter this restaurant here for the menu and fill a higher one lik so the <OOV> like you come next to other wedge with soul food its a great location period like it moved was five open on see to the information i recommend they send the side\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_text = \"bad food\"\n",
+    "\n",
+    "def generate_text(model, tokenizer, seed_text, max_len, num_words):\n",
+    "    for _ in range(max_len):\n",
+    "        token_list = tokenizer.texts_to_sequences([seed_text])[0]\n",
+    "        token_list = pad_sequences([token_list], maxlen=max_len-1, padding=\"pre\")\n",
+    "        predicted = model.predict(token_list, verbose=0)\n",
+    "        predicted = np.random.choice(num_words, p=predicted[0])\n",
+    "        # print(predicted)\n",
+    "        output_word = \"\"\n",
+    "        for word, index in tokenizer.word_index.items():\n",
+    "            if index == predicted:\n",
+    "                output_word = word\n",
+    "                break\n",
+    "        seed_text += \" \" + output_word\n",
+    "    return seed_text\n",
+    "\n",
+    "model = tf.keras.models.load_model(\"../../../models/yelp/review-generator.h5\")\n",
+    "print(generate_text(model, test_tokenizer, seed_text, 150, test_tokenizer.num_words))"
    ]
   }
  ],
