fixed size of message

--- a/notebooks/Projects/nlp/2.0-ajmk-generate-reviews.ipynb
+++ b/notebooks/Projects/nlp/2.0-ajmk-generate-reviews.ipynb
@@ -272,7 +272,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      " 267/7445 [>.............................] - ETA: 5:14 - loss: 7.1419 - accuracy: 0.0452"
+      "7445/7445 [==============================] - 384s 51ms/step - loss: 6.3981 - accuracy: 0.0657 - val_loss: 5.9125 - val_accuracy: 0.1016\n",
+      "Epoch 2/100\n",
+      "7445/7445 [==============================] - 353s 47ms/step - loss: 5.8688 - accuracy: 0.1102 - val_loss: 5.7062 - val_accuracy: 0.1225\n",
+      "Epoch 3/100\n",
+      "7445/7445 [==============================] - 372s 50ms/step - loss: 5.6168 - accuracy: 0.1233 - val_loss: 5.6343 - val_accuracy: 0.1325\n",
+      "Epoch 4/100\n",
+      "7445/7445 [==============================] - 364s 49ms/step - loss: 5.4572 - accuracy: 0.1321 - val_loss: 5.5982 - val_accuracy: 0.1384\n",
+      "Epoch 5/100\n",
+      "7445/7445 [==============================] - 370s 50ms/step - loss: 5.3423 - accuracy: 0.1386 - val_loss: 5.5925 - val_accuracy: 0.1462\n",
+      "Epoch 6/100\n",
+      "7445/7445 [==============================] - 389s 52ms/step - loss: 5.2533 - accuracy: 0.1444 - val_loss: 5.5859 - val_accuracy: 0.1479\n",
+      "Epoch 7/100\n",
+      "7445/7445 [==============================] - 361s 48ms/step - loss: 5.1780 - accuracy: 0.1486 - val_loss: 5.6278 - val_accuracy: 0.1498\n",
+      "Epoch 8/100\n",
+      "7445/7445 [==============================] - 301s 40ms/step - loss: 5.1191 - accuracy: 0.1524 - val_loss: 5.6220 - val_accuracy: 0.1500\n",
+      "Epoch 9/100\n",
+      "7445/7445 [==============================] - 290s 39ms/step - loss: 5.0690 - accuracy: 0.1555 - val_loss: 5.6488 - val_accuracy: 0.1518\n",
+      "Epoch 10/100\n",
+      "7445/7445 [==============================] - 306s 41ms/step - loss: 5.0245 - accuracy: 0.1591 - val_loss: 5.6806 - val_accuracy: 0.1516\n",
+      "Epoch 11/100\n",
+      "7445/7445 [==============================] - 363s 49ms/step - loss: 4.9840 - accuracy: 0.1615 - val_loss: 5.6893 - val_accuracy: 0.1523\n",
+      "Epoch 12/100\n",
+      "7445/7445 [==============================] - 338s 45ms/step - loss: 4.9497 - accuracy: 0.1644 - val_loss: 5.7236 - val_accuracy: 0.1538\n",
+      "Epoch 13/100\n",
+      "7445/7445 [==============================] - 278s 37ms/step - loss: 4.9166 - accuracy: 0.1676 - val_loss: 5.8277 - val_accuracy: 0.1533\n",
+      "Epoch 14/100\n",
+      "7445/7445 [==============================] - 289s 39ms/step - loss: 4.8930 - accuracy: 0.1688 - val_loss: 5.7885 - val_accuracy: 0.1522\n",
+      "Epoch 15/100\n",
+      "7445/7445 [==============================] - 289s 39ms/step - loss: 4.8693 - accuracy: 0.1707 - val_loss: 5.8252 - val_accuracy: 0.1529\n"
      ]
     }
    ],
@@ -304,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bad food attitude to die for inexpensive cleaning i highly recommend there personnel are amazing and worth that i had tshirts and the service was so fun and they said theyre fresh and <OOV> thanks hmmmm they will find pretty large collection of glass are totally tough to shop soon as are can special drug it has been rude right before ill run off of new meals not more better than a be acknowledged the environment is delicious and great affordable nice hour selection i prefer around good close with half good deals nice times hands down less than nyc and been taking my daughter this restaurant here for the menu and fill a higher one lik so the <OOV> like you come next to other wedge with soul food its a great location period like it moved was five open on see to the information i recommend they send the side\n"
+      "bad food the interior is super sundae <OOV> when the service and ambiance is large and prices who didnt waste your time i expected because i will your beat that it had a day to listen to sedona next time the sandwich to salsa thanks experience it was salad time try go\n"
      ]
     }
    ],
@@ -334,7 +362,7 @@
     "    return seed_text\n",
     "\n",
     "model = tf.keras.models.load_model(\"../../../models/yelp/review-generator.h5\")\n",
-    "print(generate_text(model, test_tokenizer, seed_text, 150, test_tokenizer.num_words))"
+    "print(generate_text(model, test_tokenizer, seed_text, max_length_of_input, test_tokenizer.num_words))"
    ]
   }
  ],
