--- a/notebooks/Projects/image/1.0-ajmk-EuroSAT.ipynb
+++ b/notebooks/Projects/image/1.0-ajmk-EuroSAT.ipynb
@@ -4851,7 +4851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4865,12 +4865,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.3 (main, May 18 2022, 16:11:28) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "531a190e0fe1f3eb8dd044e6962c6754294d288780aa1eba71aad9b263e3ca79"
+    "hash": "e215b5f8f2cf9d12d9f3258f68176b701024c1d16a2024693be8f71c36d627b9"
    }
   }
  },
